--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-spring.app.jwtExpiration=30000000
+project.image=${IMAGE_ROUTE}
+
+spring.app.jwtExpiration=${JWT_EXPIRETIME}
 spring.app.jwtSecret=${JWT_KEY}
 
